--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
     - composer install --no-dev
 
 script:
-    - phpunit --coverage-clover=coverage.clover
+    - ./bin/phpunit --coverage-clover=coverage.clover
 after_script:
     - wget https://scrutinizer-ci.com/ocular.phar
     - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
