Fix: Install dev dependancies (fix phpunit?)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ php:
 
 before_script:
     - git fetch --unshallow     # TODO: Hack as we have tests that depend upon the full history being present
-    - composer install --no-dev
+    - composer install
 
 script:
     - ./bin/phpunit --coverage-clover=coverage.clover
