--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "ptlis/diff-parser": "~0.1",
+        "ptlis/shell-command": "~0.1"
     },
     "require-dev": {
         "pdepend/pdepend": "~1.1",
